<resources>
    <string name="app_name">Petty SMS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Hi</string>
    <string name="second_fragment_label">M-Pesa Centre</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="sync">Sync</string>
    <string name="mpesa">M-Pesa</string>
    <string name="mpesa_tool">M-Pesa Centre</string>
    <string name="searchbar_hint">Search Transactions</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="sms_tool">SMS Tool</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_view_all_transactions">ViewAllTransactionsActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_select_all">Select all</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="add_petty_cash">Add Petty Cash</string>
    <string name="add">Add</string>
    <string name="search_trucks">Search Trucks</string>
    <string name="search_accounts">Search Accounts</string>

    <string name="add_truck">Add Truck</string>
    <string name="this_search_bar_provides_search_functionality_that_is_used_to_search_for_trucks">This search bar provides search functionality that is used to search for trucks</string>
    <string name="this_search_bar_provides_search_functionality_that_is_used_to_search_for_companies">This search bar provides search functionality that is used to search for companies or owners</string>
    <string name="this_search_bar_provides_search_functionality_that_is_used_to_search_for_transactors">This search bar provides search functionality that is used to search for transactors</string>
    <string name="this_search_bar_provides_search_functionality_that_is_used_to_search_for_accounts">This search bar provides search functionality that is used to search for accounts</string>


    <string name="truck_no">Truck No.</string>
    <string name="owner">Owner</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="no_trucks_to_show">No trucks to show</string>
    <string name="save">Save</string>
    <string name="no_companies_owners_to_show">No companies/owners to show</string>
    <string name="search_companies">Search Companies</string>
    <string name="company_name">Company Name</string>
    <string name="company_code">Company Code</string>
    <string name="no_transactors_to_display">No Transactors to display</string>
    <string name="search_transactors">Search Transactors</string>
    <string name="transactor_name">Transactor Name</string>
    <string name="no_accounts_to_show">No accounts to show!</string>
    <string name="reports">Reports</string>
    <string name="generate_report">Generate Report</string>
    <string name="generate_mpesa_statement">Generate M-Pesa Statement</string>
    <string name="generate_petty_cash_statement">Generate PettyCash Statement</string>
    <string name="generate_petty_cash_copy">Generate PettyCash Copy</string>
    <string name="generate_schedule">Generate Schedule</string>
</resources>