<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="?attr/colorSurface"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:paddingRight="10dp"
        android:fitsSystemWindows="true"
        android:background="@color/colorTransparent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_sort_and_filter"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:titleTextAppearance="@style/ToolbarTitleTextAppearance"
            app:menu="@menu/menu_sort_filter"
            app:navigationIcon="@drawable/baseline_close_24">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/textSortBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sort By:"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:selectionRequired="true"
                app:checkedChip="@+id/chipDateAll"
                android:layout_gravity="start">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTruckno"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/truck_no"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTransactor"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAmount"
                    style="@style/Widget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/model"/>

                <!-- Add more chips for date options -->

            </com.google.android.material.chip.ChipGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/text_transaction_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Model:"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="start">

                <!-- Add more chips for date options -->

            </com.google.android.material.chip.ChipGroup>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/owner_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Owner:"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="start">

                <!-- Add more chips for date options -->

            </com.google.android.material.chip.ChipGroup>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/dividerVertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>




            <Button
                android:id="@+id/btnResetAll"
                style="@style/Widget.Material3.Button.TonalButton.Icon"
                app:icon="@drawable/baseline_refresh_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reset All"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>